# fdmsph

./: CMakeCache.txt  CMakeLists.txt  FindH5Part.cmake  README.md  changeFilename.py  renorm.py  sph.pem
CMake/: FindEigen3.cmake  FindH5Part.cmake  FindPackageHandleStandardArgs.cmake  Findhdf5.cmake  SetUpThirdParty.cmake  ThirdPartyInstallLibrary.cmake
fenics/: CSVtoNodalValues.py  foo.csv  scratchpad.py  test.py  test2.py  thermoelasticity.pvd  thermoelasticity_T.pvd  thermoelasticity_f.pvd
inputs/: 1D_100.h5part  3D.h5part  3D_100.h5part  3D_1000_random.h5part  3D_100_random.h5part  3D_1500_random.h5part  blob.h5part  boundary.json  box.h5part  constants.json  cylinder.h5part  droplet.h5part  droplet_dx_0.00005.h5part  droplet_dx_0.00005_lowres.h5part  droplet_dx_0.0001.h5part  fluid.json  henning_3d_cylinder_1647.h5part  henning_3d_cylinder_277.h5part  inputfilereadme  nassiri_droplet.h5part  randomBox2D.h5part  sphere_214.json  sphere_555.json  sphere_random_.h5part  stow_droplet.h5part  unitsphere.h5part
inputs/henning_inputs/: 1D_1000.h5part  1D_50.h5part  3D_1500.h5part  3D_250.h5part  3D_250_random.h5part  3D_50.h5part  henning_3d_cylinder_100.h5part  sphere_941.json  sphere_random_213.h5part  sphere_random_554.h5part  sphere_random_940.h5part
inputs_back/: boundary.json  constants.json  droplet_dx_0.00005.h5part  fluid.json
outputs/: geom_out.h5part  henning_beer_941_0.h5part  out_0.h5part
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  csv.hpp  filewriter.hpp  foo.py  geometrygeneration.cpp  geometrygeneration.hpp  hdf5_hd5part buildinstructions.txt  helpers.hpp  main.cpp  particleAttrib.cpp  particleAttrib.hpp  poissonsample.hpp  sphsolver.cpp  sphsolver.hpp  thermoelastic.hpp  untitled.cpp  vvector.h
src/src/: Makefile  cmake_install.cmake
testCodes/: MSSPH.fdb_latexmk  MSSPH.fls  MSSPH.py  test.csv
